--- a/Documents/apiRelatorios/src/main/resources/reports/Blank_A4.jrxml
+++ b/Documents/apiRelatorios/src/main/resources/reports/Blank_A4.jrxml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.2.3.final using JasperReports Library version 6.2.3  -->
-<!-- 2023-11-30T00:16:13 -->
+<!-- 2024-01-09T22:54:24 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Blank_A4" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="1c7183ff-f327-4704-8549-8caeeb32ec00">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="meu-banco-de-dados.xml"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<parameter name="vistoria" class="java.lang.Long"/>
 	<queryString>
-		<![CDATA[select pergunta.* from pergunta  where vistoria =  $P{vistoria}]]>
+		<![CDATA[  select p.*, i.proponente, p2.nome, p2.cnpj_cpf
+
+  from pergunta p
+  inner join inspecoes i on i.id = p.vistoria
+  inner join pessoas p2 on p2.id = i.proponente
+
+  where vistoria =  $P{vistoria}]]>
 	</queryString>
 	<field name="id" class="java.lang.Long"/>
 	<field name="pergunta" class="java.lang.String"/>
 	<field name="resposta" class="java.lang.String"/>
 	<field name="vistoria" class="java.lang.Long"/>
+	<field name="proponente" class="java.lang.Long"/>
+	<field name="nome" class="java.lang.String"/>
+	<field name="cnpj_cpf" class="java.lang.String"/>
 	<group name="Group1"/>
 	<group name="Group2">
 		<groupHeader>
-			<band height="204">
+			<band height="260">
 				<subreport>
-					<reportElement stretchType="ElementGroupHeight" x="0" y="2" width="570" height="200" uuid="82f90dcf-4424-4e44-b5c6-daf6b7ec9afb"/>
+					<reportElement stretchType="ElementGroupHeight" x="-3" y="0" width="560" height="260" uuid="82f90dcf-4424-4e44-b5c6-daf6b7ec9afb"/>
 					<parametersMapExpression><![CDATA[new java.util.HashMap($P{REPORT_PARAMETERS_MAP})]]></parametersMapExpression>
 					<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					<subreportExpression><![CDATA["C:/Users/Maryanne/JaspersoftWorkspace/MyReports/fotosInspecao.jasper"]]></subreportExpression>
@@ -32,32 +41,87 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="79" splitType="Stretch">
+		<band height="200" splitType="Stretch">
+			<rectangle>
+				<reportElement x="0" y="0" width="557" height="200" uuid="efba0afb-3da7-4c66-82a9-dacffea44f68"/>
+			</rectangle>
 			<staticText>
-				<reportElement x="0" y="30" width="510" height="30" uuid="e1327d9a-eace-486d-a2af-3f6e0aebcf8c"/>
+				<reportElement stretchType="ElementGroupBottom" x="160" y="50" width="213" height="30" uuid="e1327d9a-eace-486d-a2af-3f6e0aebcf8c"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font fontName="SansSerif" size="14" isBold="false"/>
+					<font fontName="SansSerif" size="16" isBold="true"/>
+					<paragraph lineSpacing="AtLeast"/>
 				</textElement>
 				<text><![CDATA[Relatório de inspeções]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="8" y="134" width="40" height="19" uuid="46aa8219-6cb3-48a1-83e5-a26db9701c5b"/>
+				<textElement>
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Nome: ]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="8" y="157" width="30" height="19" uuid="ae960ab3-cc79-48b6-820e-6bc6e33003f7"/>
+				<textElement>
+					<font size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[CPF :]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="8" y="110" width="50" height="20" uuid="3dd55e90-fdea-476c-af6d-f64595d5dc8d"/>
+				<textElement verticalAlignment="Middle">
+					<font fontName="SansSerif" size="10" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Vistoria :]]></text>
+			</staticText>
+			<image>
+				<reportElement x="0" y="10" width="93" height="90" uuid="b27582d6-d8eb-4019-93f9-219c7cdd6ffb"/>
+				<imageExpression><![CDATA["C:/Users/Maryanne/JaspersoftWorkspace/MyReports/logo.png.png"]]></imageExpression>
+			</image>
+			<textField>
+				<reportElement x="54" y="110" width="150" height="20" uuid="e2e9e736-ec1f-443b-8800-c9cf25484c3d"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font fontName="SansSerif" size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{vistoria}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="43" y="134" width="162" height="19" uuid="bc26764b-b66c-4963-9ea2-6ee6ee0753b4"/>
+				<textElement>
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{nome}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="40" y="158" width="170" height="19" uuid="934bc4a2-30b6-4138-a47b-284bf112861a"/>
+				<textElement verticalAlignment="Top">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{cnpj_cpf}]]></textFieldExpression>
+			</textField>
+			<textField pattern="MMMMM dd, yyyy">
+				<reportElement x="460" y="10" width="90" height="16" uuid="aa185441-a176-453b-8fdf-a82bfe68ce57"/>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
+			<textField pattern="HH:mm">
+				<reportElement x="460" y="26" width="44" height="17" uuid="e7ee6269-8bd3-4822-abba-ae0f9f440371"/>
+				<textElement textAlignment="Left"/>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<detail>
-		<band height="43" splitType="Stretch">
+		<band height="51" splitType="Stretch">
 			<textField>
-				<reportElement x="10" y="0" width="100" height="16" uuid="017717d0-a3e6-422a-8b22-2dd59aa10e3b"/>
+				<reportElement x="0" y="4" width="570" height="16" uuid="017717d0-a3e6-422a-8b22-2dd59aa10e3b"/>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{pergunta}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="10" y="16" width="100" height="20" uuid="7cf20e9a-653d-4292-953d-f9bb8411b673"/>
+				<reportElement x="0" y="24" width="570" height="24" uuid="7cf20e9a-653d-4292-953d-f9bb8411b673"/>
 				<textFieldExpression><![CDATA[$F{resposta}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="250" y="6" width="100" height="30" uuid="f4521757-e073-4092-a900-25b6d253bbc4"/>
-				<textFieldExpression><![CDATA[$F{vistoria}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
